--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <!-- <link rel="stylesheet" href="./.css/style.css"> -->
 
-    <link rel="stylesheet" href="../.css/reset.css">
+    <link rel="stylesheet" href="/.css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="../.css/styles.css">
+    <link rel="stylesheet" href="/.css/styles.css">
 </head>
 <body id="projects">
 
@@ -23,12 +23,12 @@
             <div id="slides-main" class="slides">
                 <div class="slide" data-index="0">
                     <div class="abs-mask">
-                        <div class="slide-image" style="background-image: url(../.img/Mockup-simon.png)"></div>
+                        <div class="slide-image" style="background-image: url(/.img/Mockup-simon.png)"></div>
                     </div>
                 </div>
                 <div class="slide" data-index="1">
                     <div class="abs-mask">
-                        <div class="slide-image" style="background-image: url(../.img/Hidden-Mock.png)"></div>
+                        <div class="slide-image" style="background-image: url(/.img/Hidden-Mock.png)"></div>
                     </div>
                 </div>
             </div>
